minimal working version done. now onto face 2. need to find a way with creating a database.
next to come:
modules
nat gateway
secrets manager
opas
https addition
trivy scan
Add additional Terraform files to .gitignore

Update .gitignore to exclude terraform.tfvars, variable.tf, secrets.tf,
and db-init.tf for security and configuration management.

--- a/.gitignore
+++ b/.gitignore
@@ -45,7 +45,13 @@ fider.sql
 
 
 #ignore
-#terraform.tfvars
+terraform.tfvars
 
 #ignore variables for now
-#variable.tf
+variable.tf
+
+#ignore secrets file
+secrets.tf
+
+#ignore
+db-init.tf
