the modules almost done. will have a review before moving to the CI/cd pipline phase:
things to check:
🔹if ecs can access rds
🔹check the secrets work with other secrets
🔹dockerfile changes

--- a/.gitignore
+++ b/.gitignore
@@ -61,3 +61,20 @@ generated-diagrams
 
 #ignore
 locals.tf
+
+#ignore secrets node_modules
+secrets/
+
+.terraform/
+*.tfstate
+*.tfstate.*
+*.tfplan
+crash.log
+crash.*.log
+override.tf
+override.tf.json
+*_override.tf
+*_override.tf.json
+plan.json
+*.pem
+*.key
