--- a/.github/workflows/terra.yaml
+++ b/.github/workflows/terra.yaml
@@ -35,6 +35,17 @@ jobs:
       - name: Plan Terraform
         working-directory: ./infra
         env:
+          TF_VAR_aws_region: ${{ secrets.AWS_REGION }}
+          TF_VAR_environment: ${{ secrets.ENVIRONMENT }}
+          TF_VAR_domain_name: ${{ secrets.DOMAIN_NAME }}
+          TF_VAR_base_url: ${{ secrets.BASE_URL }}
+          TF_VAR_vpc_cidr: ${{ secrets.VPC_CIDR }}
+          TF_VAR_primary_subnet_cidr: ${{ secrets.PRIMARY_SUBNET_CIDR }}
+          TF_VAR_secondary_subnet_cidr: ${{ secrets.SECONDARY_SUBNET_CIDR }}
+          TF_VAR_private_subnet_1_cidr: ${{ secrets.PRIVATE_SUBNET_1_CIDR }}
+          TF_VAR_private_subnet_2_cidr: ${{ secrets.PRIVATE_SUBNET_2_CIDR }}
+          TF_VAR_container_port: ${{ secrets.CONTAINER_PORT }}
+          TF_VAR_github_repo: ${{ secrets.GITHUB_REPO }}
           TF_VAR_db_username: ${{ secrets.DB_USERNAME }}
           TF_VAR_db_password: ${{ secrets.DB_PASSWORD }}
           TF_VAR_db_name: ${{ secrets.DB_NAME }}
@@ -42,14 +53,22 @@ jobs:
           TF_VAR_jwt_secret: ${{ secrets.JWT_SECRET }}
           TF_VAR_identifier_username: ${{ secrets.IDENTIFIER_USERNAME }}
           TF_VAR_identifier_password: ${{ secrets.IDENTIFIER_PASSWORD }}
-          TF_VAR_secondary_subnet_cidr: ${{ secrets.SECONDARY_SUBNET_CIDR }}
-          TF_VAR_private_subnet_1_cidr: ${{ secrets.PRIVATE_SUBNET_1_CIDR }}
-          TF_VAR_private_subnet_2_cidr: ${{ secrets.PRIVATE_SUBNET_2_CIDR }}
         run: terraform plan
 
       - name: Apply Terraform
         working-directory: ./infra
         env:
+          TF_VAR_aws_region: ${{ secrets.AWS_REGION }}
+          TF_VAR_environment: ${{ secrets.ENVIRONMENT }}
+          TF_VAR_domain_name: ${{ secrets.DOMAIN_NAME }}
+          TF_VAR_base_url: ${{ secrets.BASE_URL }}
+          TF_VAR_vpc_cidr: ${{ secrets.VPC_CIDR }}
+          TF_VAR_primary_subnet_cidr: ${{ secrets.PRIMARY_SUBNET_CIDR }}
+          TF_VAR_secondary_subnet_cidr: ${{ secrets.SECONDARY_SUBNET_CIDR }}
+          TF_VAR_private_subnet_1_cidr: ${{ secrets.PRIVATE_SUBNET_1_CIDR }}
+          TF_VAR_private_subnet_2_cidr: ${{ secrets.PRIVATE_SUBNET_2_CIDR }}
+          TF_VAR_container_port: ${{ secrets.CONTAINER_PORT }}
+          TF_VAR_github_repo: ${{ secrets.GITHUB_REPO }}
           TF_VAR_db_username: ${{ secrets.DB_USERNAME }}
           TF_VAR_db_password: ${{ secrets.DB_PASSWORD }}
           TF_VAR_db_name: ${{ secrets.DB_NAME }}
@@ -57,7 +76,4 @@ jobs:
           TF_VAR_jwt_secret: ${{ secrets.JWT_SECRET }}
           TF_VAR_identifier_username: ${{ secrets.IDENTIFIER_USERNAME }}
           TF_VAR_identifier_password: ${{ secrets.IDENTIFIER_PASSWORD }}
-          TF_VAR_secondary_subnet_cidr: ${{ secrets.SECONDARY_SUBNET_CIDR }}
-          TF_VAR_private_subnet_1_cidr: ${{ secrets.PRIVATE_SUBNET_1_CIDR }}
-          TF_VAR_private_subnet_2_cidr: ${{ secrets.PRIVATE_SUBNET_2_CIDR }}
         run: terraform apply -auto-approve
