--- a/.github/workflows/terra.yaml
+++ b/.github/workflows/terra.yaml
@@ -45,7 +45,7 @@ jobs:
           TF_VAR_private_subnet_1_cidr: ${{ secrets.PRIVATE_SUBNET_1_CIDR }}
           TF_VAR_private_subnet_2_cidr: ${{ secrets.PRIVATE_SUBNET_2_CIDR }}
           TF_VAR_container_port: ${{ secrets.CONTAINER_PORT }}
-          TF_VAR_github_repo: ${{ secrets.GITHUB_REPO }}
+          TF_VAR_github_repo: ${{ secrets.REPO_NAME }}
           TF_VAR_db_username: ${{ secrets.DB_USERNAME }}
           TF_VAR_db_password: ${{ secrets.DB_PASSWORD }}
           TF_VAR_db_name: ${{ secrets.DB_NAME }}
@@ -68,7 +68,7 @@ jobs:
           TF_VAR_private_subnet_1_cidr: ${{ secrets.PRIVATE_SUBNET_1_CIDR }}
           TF_VAR_private_subnet_2_cidr: ${{ secrets.PRIVATE_SUBNET_2_CIDR }}
           TF_VAR_container_port: ${{ secrets.CONTAINER_PORT }}
-          TF_VAR_github_repo: ${{ secrets.GITHUB_REPO }}
+          TF_VAR_github_repo: ${{ secrets.REPO_NAME }}
           TF_VAR_db_username: ${{ secrets.DB_USERNAME }}
           TF_VAR_db_password: ${{ secrets.DB_PASSWORD }}
           TF_VAR_db_name: ${{ secrets.DB_NAME }}
