--- a/.github/workflows/terra.yaml
+++ b/.github/workflows/terra.yaml
@@ -13,6 +13,29 @@ jobs:
     permissions:
       id-token: write
       contents: read
+    defaults:
+      run:
+        working-directory: ./infra
+    env:
+      TF_VAR_aws_region: ${{ secrets.AWS_REGION }}
+      TF_VAR_environment: ${{ secrets.ENVIRONMENT }}
+      TF_VAR_domain_name: ${{ secrets.DOMAIN_NAME }}
+      TF_VAR_base_url: ${{ secrets.BASE_URL }}
+      TF_VAR_vpc_cidr: ${{ secrets.VPC_CIDR }}
+      TF_VAR_primary_subnet_cidr: ${{ secrets.PRIMARY_SUBNET_CIDR }}
+      TF_VAR_secondary_subnet_cidr: ${{ secrets.SECONDARY_SUBNET_CIDR }}
+      TF_VAR_private_subnet_1_cidr: ${{ secrets.PRIVATE_SUBNET_1_CIDR }}
+      TF_VAR_private_subnet_2_cidr: ${{ secrets.PRIVATE_SUBNET_2_CIDR }}
+      TF_VAR_container_port: ${{ secrets.CONTAINER_PORT }}
+      TF_VAR_github_repo: ${{ secrets.REPO_NAME }}
+      TF_VAR_db_username: ${{ secrets.DB_USERNAME }}
+      TF_VAR_db_password: ${{ secrets.DB_PASSWORD }}
+      TF_VAR_db_name: ${{ secrets.DB_NAME }}
+      TF_VAR_db_identifier: ${{ secrets.DB_IDENTIFIER }}
+      TF_VAR_jwt_secret: ${{ secrets.JWT_SECRET }}
+      TF_VAR_identifier_username: ${{ secrets.IDENTIFIER_USERNAME }}
+      TF_VAR_identifier_password: ${{ secrets.IDENTIFIER_PASSWORD }}
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
@@ -29,51 +52,10 @@ jobs:
           terraform_version: 1.10.5
 
       - name: Initialize Terraform
-        working-directory: ./infra
         run: terraform init
 
       - name: Plan Terraform
-        working-directory: ./infra
-        env:
-          TF_VAR_aws_region: ${{ secrets.AWS_REGION }}
-          TF_VAR_environment: ${{ secrets.ENVIRONMENT }}
-          TF_VAR_domain_name: ${{ secrets.DOMAIN_NAME }}
-          TF_VAR_base_url: ${{ secrets.BASE_URL }}
-          TF_VAR_vpc_cidr: ${{ secrets.VPC_CIDR }}
-          TF_VAR_primary_subnet_cidr: ${{ secrets.PRIMARY_SUBNET_CIDR }}
-          TF_VAR_secondary_subnet_cidr: ${{ secrets.SECONDARY_SUBNET_CIDR }}
-          TF_VAR_private_subnet_1_cidr: ${{ secrets.PRIVATE_SUBNET_1_CIDR }}
-          TF_VAR_private_subnet_2_cidr: ${{ secrets.PRIVATE_SUBNET_2_CIDR }}
-          TF_VAR_container_port: ${{ secrets.CONTAINER_PORT }}
-          TF_VAR_github_repo: ${{ secrets.REPO_NAME }}
-          TF_VAR_db_username: ${{ secrets.DB_USERNAME }}
-          TF_VAR_db_password: ${{ secrets.DB_PASSWORD }}
-          TF_VAR_db_name: ${{ secrets.DB_NAME }}
-          TF_VAR_db_identifier: ${{ secrets.DB_IDENTIFIER }}
-          TF_VAR_jwt_secret: ${{ secrets.JWT_SECRET }}
-          TF_VAR_identifier_username: ${{ secrets.IDENTIFIER_USERNAME }}
-          TF_VAR_identifier_password: ${{ secrets.IDENTIFIER_PASSWORD }}
-        run: terraform plan
+        run: terraform plan -lock-timeout=5m
 
       - name: Apply Terraform
-        working-directory: ./infra
-        env:
-          TF_VAR_aws_region: ${{ secrets.AWS_REGION }}
-          TF_VAR_environment: ${{ secrets.ENVIRONMENT }}
-          TF_VAR_domain_name: ${{ secrets.DOMAIN_NAME }}
-          TF_VAR_base_url: ${{ secrets.BASE_URL }}
-          TF_VAR_vpc_cidr: ${{ secrets.VPC_CIDR }}
-          TF_VAR_primary_subnet_cidr: ${{ secrets.PRIMARY_SUBNET_CIDR }}
-          TF_VAR_secondary_subnet_cidr: ${{ secrets.SECONDARY_SUBNET_CIDR }}
-          TF_VAR_private_subnet_1_cidr: ${{ secrets.PRIVATE_SUBNET_1_CIDR }}
-          TF_VAR_private_subnet_2_cidr: ${{ secrets.PRIVATE_SUBNET_2_CIDR }}
-          TF_VAR_container_port: ${{ secrets.CONTAINER_PORT }}
-          TF_VAR_github_repo: ${{ secrets.REPO_NAME }}
-          TF_VAR_db_username: ${{ secrets.DB_USERNAME }}
-          TF_VAR_db_password: ${{ secrets.DB_PASSWORD }}
-          TF_VAR_db_name: ${{ secrets.DB_NAME }}
-          TF_VAR_db_identifier: ${{ secrets.DB_IDENTIFIER }}
-          TF_VAR_jwt_secret: ${{ secrets.JWT_SECRET }}
-          TF_VAR_identifier_username: ${{ secrets.IDENTIFIER_USERNAME }}
-          TF_VAR_identifier_password: ${{ secrets.IDENTIFIER_PASSWORD }}
-        run: terraform apply -auto-approve
+        run: terraform apply -auto-approve -lock-timeout=5m
