--- a/.github/workflows/terra.yaml
+++ b/.github/workflows/terra.yaml
@@ -18,7 +18,6 @@ jobs:
         working-directory: ./infra
     env:
       TF_VAR_aws_region: ${{ secrets.AWS_REGION }}
-      TF_VAR_environment: ${{ secrets.ENVIRONMENT }}
       TF_VAR_domain_name: ${{ secrets.DOMAIN_NAME }}
       TF_VAR_base_url: ${{ secrets.BASE_URL }}
       TF_VAR_vpc_cidr: ${{ secrets.VPC_CIDR }}
@@ -38,7 +37,7 @@ jobs:
 
     steps:
       - name: Checkout code
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
@@ -54,8 +53,11 @@ jobs:
       - name: Initialize Terraform
         run: terraform init
 
+      - name: Validate Terraform
+        run: terraform validate
+
       - name: Plan Terraform
-        run: terraform plan -lock-timeout=5m
+        run: terraform plan -lock-timeout=5m -out=tfplan
 
       - name: Apply Terraform
-        run: terraform apply -auto-approve -lock-timeout=5m
+        run: terraform apply -auto-approve -lock-timeout=5m tfplan
