--- a/.github/workflows/clean.yaml
+++ b/.github/workflows/clean.yaml
@@ -8,7 +8,7 @@ jobs:
     runs-on: ubuntu-latest
     permissions:
       id-token: write
-      contents: read
+      contents: readG
     defaults:
       run:
         working-directory: ./infra
@@ -40,6 +40,7 @@ jobs:
         with:
           role-to-assume: ${{ secrets.AWS_ROLE_ARN }}
           aws-region: us-east-1
+          role-duration-seconds: 3600
 
       - name: Set up Terraform
         uses: hashicorp/setup-terraform@v3
@@ -54,10 +55,8 @@ jobs:
       - name: Terraform Init
         run: terraform init
 
-      #run terraform plan
-      - name: Terraform Plan
-        run: terraform plan -out=tfplan
-
       #destroy infrastructure
       - name: Terraform Destroy
-        run: terraform destroy -auto-approve -lock-timeout=5m
+        run: |
+          aws sts get-caller-identity
+          terraform destroy -auto-approve -lock-timeout=5m
