--- a/.github/workflows/clean.yaml
+++ b/.github/workflows/clean.yaml
@@ -8,7 +8,7 @@ jobs:
     runs-on: ubuntu-latest
     permissions:
       id-token: write
-      contents: readG
+      contents: read
     defaults:
       run:
         working-directory: ./infra
